--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Clicker-heroes-guide</h1>
+        <h1 class="header">Castor Explains Clicker Heroes</h1>
         <p class="header">Because I get tired of explaining this in chat.</p>
 
         <ul>
@@ -25,22 +25,17 @@
           <li><a class="buttons github" href="https://github.com/airpants/clicker-heroes-guide">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/airpants">airpants</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="http://www.kongregate.com/accounts/castorpollux">castorpollux</a></p>
 
 
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#top" aria-hidden="true"><span class="octicon octicon-link"></a>:star2: Hi, I'm Castor and I'm gonna explain to you a thing.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>First: I don't math. I can math a little, but it's really not my forte. However, math you find here either comes from the source or has been verified by a Real Honest-to-God Mathemetician (chi_squared).</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Second: This is a work in progress, a long time in coming. Wacky wikis, un-updated FAQs and thousands of Reddit posts to wade through does not make it easy to find information. My goal here is to provide fast help, answer some FAQs, and to keep my ~~pimp hand strong~~ HTML/CSS abilities up to par.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
