--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Clicker-heroes-guide by airpants</title>
+    <title>Castor Explains Clicker Heroes</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Castor Explains Clicker Heroes</h1>
-        <p class="header">Because I get tired of explaining this in chat.</p>
+        <p class="header">Because I get tired of explaining this shit in chat.</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/airpants/clicker-heroes-guide/zipball/master">Download ZIP</a></li>
@@ -31,31 +31,31 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#top" aria-hidden="true"><span class="octicon octicon-link"></a>:star2: Hi, I'm Castor and I'm gonna explain to you a thing.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#top" aria-hidden="true"><span class="octicon octicon-link"></a> Hi, I'm Castor and I'm gonna explain to you a thing.</h3>
 
 <p>First: I don't math. I can math a little, but it's really not my forte. However, math you find here either comes from the source or has been verified by a Real Honest-to-God Mathemetician (chi_squared).</p>
 
-<p>Second: This is a work in progress, a long time in coming. Wacky wikis, un-updated FAQs and thousands of Reddit posts to wade through does not make it easy to find information. My goal here is to provide fast help, answer some FAQs, and to keep my ~~pimp hand strong~~ HTML/CSS abilities up to par.</p>
+<p>Second: This is a work in progress, a long time in coming. Wacky wikis, un-updated FAQs and thousands of Reddit posts to wade through does not make it easy to find information. My goal here is to provide fast help, answer some FAQs, and to keep my <s>pimp hand strong</s> HTML/CSS abilities up to par.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"></a>Can I help?</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Yes please. Message me if you have something to add, a question you'd like answered, or a cool resource. I can't do this alone.</p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"></a>Actual Butts</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Sprry, I lied. No butts here.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Me, so far, with some math by chi_squared.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>You can figure out a message function, I promise. I believe in you.</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
