--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#top" aria-hidden="true"><span class="octicon octicon-link"></a> Hi, I'm Castor and I'm gonna explain to you a thing.</h3>
 
-<p>First: I don't math. I can math a little, but it's really not my forte. However, math you find here either comes from the source or has been verified by a Real Honest-to-God Mathemetician (chi_squared).</p>
+<p><b>First Off:</b> I don't math. I can math a little, but it's really not my forte. However, any and all math you find here either comes from the source or has been verified by a Real Honest-to-God Mathemetician (chi_squared).</p>
 
-<p>Second: This is a work in progress, a long time in coming. Wacky wikis, un-updated FAQs and thousands of Reddit posts to wade through does not make it easy to find information. My goal here is to provide fast help, answer some FAQs, and to keep my <s>pimp hand strong</s> HTML/CSS abilities up to par.</p>
+<p><b>Secondly:</b> This is a work in progress, a long time in coming. Wacky wikis, un-updated FAQs and thousands of Reddit posts to wade through does not make it easy to find information. My goal here is to provide fast help, answer some FAQs, and to keep my <s>pimp hand strong</s> HTML/CSS abilities up to par.</p>
 
+<p><b>Lastly:</b> I am but one little housewife. Please have patience with me.</p>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"></a>Can I help?</h3>
 
@@ -45,7 +46,7 @@
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"></a>Actual Butts</h3>
 
-<p>Sprry, I lied. No butts here.</p>
+<p>Sorry, I lied. No butts here.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -59,6 +60,7 @@
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
