--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p class="header">Because I get tired of explaining this shit in chat.</p>
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/airpants/clicker-heroes-guide/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/airpants/clicker-heroes-guide/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/airpants/clicker-heroes-guide">View On GitHub</a></li>
+          <li><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
+          <li class="download"><a class="button midgame" href="#midGame">Mid Game FAQ</a></li>
+          <li><a class="button lategame" href="#lateGame">Late Game FAQ</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="http://www.kongregate.com/accounts/castorpollux">castorpollux</a></p>
@@ -39,19 +39,19 @@
 
 <p><b>Lastly:</b> I am but one little housewife. Please have patience with me.</p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"></a>Can I help?</h3>
+<a id="earlyGame" class="anchor" href="#earlyGame" aria-hidden="true"></a>Early Game FAQ</h3>
 
-<p>Yes please. Message me if you have something to add, a question you'd like answered, or a cool resource. I can't do this alone.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"></a>Actual Butts</h3>
-
-<p>Sorry, I lied. No butts here.</p>
+<p>Wots a HS preshus?</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="midGame" class="anchor" href="#midGame" aria-hidden="true"></a>Mid Game FAQ</h3>
 
-<p>Me, so far, with some math by chi_squared.</p>
+<p>Fucking Morgulis how does he work.</p>
+
+<h3>
+<a id="lateGame" class="anchor" href="#lateGame" aria-hidden="true"><span class="octicon octicon-link"></span></a>Late Game FAQ</h3>
+
+<p>Zone 2500 and holy shit I'm bored now.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"></a>Support or Contact</h3>
@@ -59,9 +59,9 @@
 <p>You can figure out a message function, I promise. I believe in you.</p>
       </section>
       <footer>
-      	<h2><a href="#top">Go to Top</a></h2>
-        <p><x-small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</x-small></p>
-        <p><x-small>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></x-small></p>
+      	<h4><a href="#top">Go to Page Top</a></h4>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
