--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ul>
           <li><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
-          <li class="download"><a class="button midgame" href="#midGame">Mid Game FAQ</a></li>
+          <li><a class="button midgame" href="#midGame">Mid Game FAQ</a></li>
           <li><a class="button lategame" href="#lateGame">Late Game FAQ</a></li>
         </ul>
 
