--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <p class="header">Because I get tired of explaining this shit in chat.</p>
 
         <ul>
-          <li><a class="button earlygame" href="/#earlyGame">Early Game FAQ</a></li>
-          <li><a class="button midgame" href="/#midGame">Mid Game FAQ</a></li>
-          <li><a class="button lategame" href="/#lateGame">Late Game FAQ</a></li>
+          <li class="download"><a class="button earlygame" href="/#earlyGame">Early Game FAQ</a></li>
+          <li class="download"><a class="button midgame" href="/#midGame">Mid Game FAQ</a></li>
+          <li class="download"><a class="button lategame" href="/#lateGame">Late Game FAQ</a></li>
         </ul>
 
         <p class="header">This project is maintained by <a class="header name" href="http://www.kongregate.com/accounts/castorpollux">castorpollux</a></p>
