--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <p class="header">Because I get tired of explaining this shit in chat.</p>
 
         <ul>
-          <li class="download"><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
-          <li class="download"><a class="button" href="#midGame">Mid Game FAQ</a></li>
+
+          <li class="download"><a class="button midgame" href="#midGame">Mid Game FAQ</a></li>
+                    <li class="download"><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
           <li class="download"><a class="button lategame" href="#lateGame">Late Game FAQ</a></li>
         </ul>
 
