--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
         <h1 class="header">Castor Explains Clicker Heroes</h1>
         <p class="header">Because I get tired of explaining this shit in chat.</p>
 
-        <ul>
-
-          <li class="download"><a class="button midgame" href="#midGame">Mid Game FAQ</a></li>
-                    <li class="download"><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
-          <li class="download"><a class="button lategame" href="#lateGame">Late Game FAQ</a></li>
-        </ul>
+        <a class="button earlygame" href="#earlyGame">Early Game FAQ</a><br>
+        <a class="button midgame" href="#midGame">Mid Game FAQ</a><br>
+        <a class="button lategame" href="#lateGame">Late Game FAQ</a><br>
 
         <p class="header">This project is maintained by <a class="header name" href="http://www.kongregate.com/accounts/castorpollux">castorpollux</a></p>
 
