--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       <header>
         <h1 class="header">Castor Explains Clicker Heroes</h1>
         <p class="header">Because I get tired of explaining this shit in chat.</p>
-
-        <a class="button earlygame" href="#earlyGame">Early Game FAQ</a><br>
-        <a class="button midgame" href="#midGame">Mid Game FAQ</a><br>
-        <a class="button lategame" href="#lateGame">Late Game FAQ</a><br>
+	<ul>
+		<li><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
+                <li><a class="button midgame" href="http://www.google.com">Mid Game FAQ</a></li>
+                <li> <a class="button lategame" href="#lateGame">Late Game FAQ</a></li>
+	</ul>
 
         <p class="header">This project is maintained by <a class="header name" href="http://www.kongregate.com/accounts/castorpollux">castorpollux</a></p>
 
