--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h1 class="header">Castor Explains Clicker Heroes</h1>
         <p class="header">Because I get tired of explaining this shit in chat.</p>
 	<ul>
-		<li><a class="button earlygame" href="http://www.google.com">Early Game FAQ</a></li>
-                <li><a class="button midgame" href="http://www.google.com">Mid Game FAQ</a></li>
+		<li><a class="button earlygame" href="#earlyGame">Early Game FAQ</a></li>
+                <li><a class="button midgame" href="#midGame">Mid Game FAQ</a></li>
                 <li> <a class="button lategame" href="#lateGame">Late Game FAQ</a></li>
 	</ul>
 
