--- a/index.html
+++ b/index.html
@@ -40,7 +40,17 @@
 <h3>
 <a id="earlyGame" class="anchor" href="#earlyGame" aria-hidden="true"></a>Early Game FAQ</h3>
 
-<p>Wots a HS preshus?</p>
+<ul>
+	<li><a href="#earlyHS">What's HS?</a></li>
+	<li><a href="#earlyHSGet">How do I get HS?</a></li>
+	<li><a href="#earlyAscension">What is Ascension? Who is Amenhotep?</a></li>
+	<li><a href="#earlyFirstRun">When should I ascend? What's my first run going to look like?</a></li>
+	<li><a href="#earlyWhyKeepHS">Why should I keep my HS instead of spending them?</a></li>
+	<li><a href="#earlyAncients">What Ancients should I buy first?</a></li>
+	<li><a href="#earlyDK">Why is Dread Knight so friggin' expensive? When can I buy him?</a></li>
+	<li><a href="#earlyTB">I got Frostleaf, now what? (Getting early heros to 1000)</a></li>
+	<li><a href="#earlyGilds">What are Gilds? How do I get them?</a></li>
+</ul>
 
 <h3>
 <a id="midGame" class="anchor" href="#midGame" aria-hidden="true"></a>Mid Game FAQ</h3>
